fixed alignment of resume header and icon

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -171,7 +171,7 @@ header nav ul li a:active {
 }
 
 span {
-  padding-top: 1.375em;
+  padding-top: 1.46025em;
   font-size: 1.125em;
   color: #000000;
 }
